# rome

./: .gitignore  README.md  compile_and_run.cmd  compile_release.cmd  compile_textures.cmd  header.h  helper.h  main.c  map.h  map.inc  mesh.h  mesh.inc  plane.h  plane_lod2.h  plane_lod3.h  plane_lod4.h  plane_lod5.h  plane_lod6.h  shaders.c  shaders.h  shaders.slang  vk_machine.h  vk_swapchain.h  vk_texture.h  vk_util.h  wayland.c  win32.c
config/: CMakeLists.txt  compile_and_run.cmd  compile_release.cmd  compile_shaders.cmd  compile_textures.cmd
platform/: drm.c  drm.inc  linux.c  platform.h  wayland.c  wayland.inc  win32.c
vulkan/: buffers.h  drm_present.h  vk.c  vk.h  vk_machine.h  vk_util.h
