# CMAKE configuration to help CLion understand and debug
cmake_minimum_required(VERSION 3.16)
project(fatzke C)
set(CMAKE_C_STANDARD 99)

file(GLOB SRC "${CMAKE_SOURCE_DIR}/../*.c")
if(WIN32)
file(GLOB OBJ "${CMAKE_SOURCE_DIR}/../static/win32/*.obj")
else()
file(GLOB OBJ "${CMAKE_SOURCE_DIR}/../static/linux/*.o")
endif()
add_executable(vk ${SRC} ${OBJ})
if(WIN32)
    target_link_directories(vk PRIVATE "$ENV{VULKAN_SDK}/Lib")
    target_include_directories(vk PRIVATE "$ENV{VULKAN_SDK}/Include")
    target_link_libraries(vk PRIVATE user32 gdi32 vulkan-1)
else()
    target_link_libraries(vk PRIVATE wayland-client xkbcommon m vulkan)
endif()
