# CMAKE configuration to help CLion understand and debug
cmake_minimum_required(VERSION 3.16)
project(rome C)
set(CMAKE_C_STANDARD 99)

set(SRC "${CMAKE_SOURCE_DIR}/../main.c")
set(VK "${CMAKE_SOURCE_DIR}/../vulkan/vk.c")
if(WIN32)
set(PLT "${CMAKE_SOURCE_DIR}/../platform/win32.c")
file(GLOB OBJ "${CMAKE_SOURCE_DIR}/../static/win32/*.obj")
else()
set(PLT "${CMAKE_SOURCE_DIR}/../platform/linux.c")
file(GLOB OBJ "${CMAKE_SOURCE_DIR}/../static/linux/*.o")
endif()
add_executable(rome ${SRC} ${PLT} ${VK} ${OBJ})
if(WIN32)
    target_link_directories(rome PRIVATE "$ENV{VULKAN_SDK}/Lib")
    target_include_directories(rome PRIVATE "$ENV{VULKAN_SDK}/Include")
    target_link_libraries(rome PRIVATE user32 gdi32 vulkan-1)
else()
    target_link_libraries(rome PRIVATE wayland-client input udev drm gbm m vulkan)
endif()
